styles/generalstyle.css
.socialMediaIcon {
    width: 32px;
    height: 32px;
}

.img-fluid {
    width: 100%;
}

.row{
    text-align: center;
}

.column-stores{
    padding-top: 6em;
    padding-bottom: 6em;
    background-color: lightgrey;
}
#column-stores-heading{
    font-family: "Lucida Console";
    padding-bottom: 2em;
}

.h-100{
    padding-top:10em;
}

#start-shopping{
    padding: 0.5em 2em 0.5em 2em;
    font-size: 1.2em;
}

#footer {
    background-color: black;
    height: 500px;
    clear:both;
}

p a {
    text-decoration: none;
    list-style-type: none;
    color: white;
}

p a:hover {
    color: white;
}

.input-group>input[type=text] {
    width: 30vw;
}
.has-search .form-control {
    padding-left: 2.375rem;
}

.has-search .form-control-feedback {
    position: absolute;
    z-index: 2;
    display: block;
    width: 2.375rem;
    height: 2.375rem;
    line-height: 2.375rem;
    text-align: center;
    pointer-events: none;
    color: #aaa;
}

.green-login-shadow{
    background-color: #60ce80;
    border: none;
    color: white;
    width: 75px;
    padding: 6px;
    border-radius: 5px;
    box-shadow: 0 12px 16px 0 rgba(0,0,0,0.10), 0 17px 50px 0 rgba(0,0,0,0.10);
}
.green-login-shadow:hover{
    color: white;
    box-shadow: none;
    background-color: #62bd7c
}

.green-button-shadow{
    background-color: #60ce80;
    border: none;
    color: white;
    width: 75px;
    padding: 10px;
    border-radius: 5px;
    text-decoration: none;
    box-shadow: 0 12px 16px 0 rgba(0,0,0,0.10), 0 17px 50px 0 rgba(0,0,0,0.1);
}
.green-button-shadow:hover{
    color: white;
    box-shadow: none;
    background-color: #62bd7c
}
.green-search{
    background-color: #60ce80;
    border: none;
    color: white;
    border-radius: 5px;
    width: 40px;
    padding: 7px;
}
.green-search:hover{
    background-color: #62bd7c
}

/* login.html style */
.alignCenter{
    margin: auto;
    padding-right: 10em;
}

.login-margins{
    height: 30vh;
    margin-top: 10vh;
}


/* eligible.html style */
#google-map {
    text-align: center;
}

#availability-form {
    padding-top: 100px;
    padding-bottom: 20px;
    margin: 0 auto;
    width: 50%;
}

#availiability-button {
    background-color: #60ce80;
    color: white;
    padding: 5px;
    border-radius: 10px;
    border: none;
}

#availiability-button:hover {
    background-color: #62bd7c;
}


/* faq.html style */
.accordion {
    background-color: #eee;
    color: #444;
    cursor: pointer;
    padding: 18px;
    width: 100%;
    border: 1px solid #D0D0D0;
    border-radius: 5px;
    text-align: left;
    outline: none;
    font-size: 15px;
    transition: 0.4s;
  }

  .accordion:hover {
    background-color: #ccc;
  }

  .panel {
    padding: 0 18px;
    display: none;
    background-color: white;
    overflow: hidden;
    border: black;
  }

  #faq {
    width: 50%;
    padding: 20px;
  }

  .accordion:after {
    content: '\02795';
    font-size: 13px;
    color: #777;
    float: right;
    margin-left: 5px;
  }

  .accordion.active:after {
    content: "\2796";
  }

